# youtube-analytics-project

./: .flake8  pyproject.toml
src/: channel.py  playlist.py  video.py
