[tool.poetry]
name = "youtube-analytics-project"
version = "0.1.0"
description = ""
authors = ["Gennady <topchiev@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.110.0"
isodate = "^0.6.1"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"


[tool.poetry.group.lint.dependencies]
flake8 = "^6.1.0"
black = "^23.12.0"
isort = "^5.13.1"
mypy = "^1.7.1"

[tool.mypy]
disallow_untyped_defs = 'True'
no_implicit_optional = 'True'
warn_return_any = 'True'

[tool.isort]
include_trailing_comma = true
line_length = 100
lines_after_imports = 2
skip = '__init__.py'

[tool.black]
line-length = 100
exclude = """
    venv/
    tests/
"""

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
